feat(backend,webapp): add dedicated Area/Entrance/Marker management APIs, scope Seat/EventLocation writes accordingly
Add full CRUD resources for areas/entrances/markers, switch seats to referencing them by id, and narrow EventLocation's update endpoint to its own metadata.